--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,8 @@
 fastapi[all]
+pydantic==2.6.4
+python==3.10.13
+rake-nltk==1.0.6
+pandas==2.1.4
+scikit-learn==1.3.2
+nltk==3.8.1
+deep-translator==1.11.4
